--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
-    "css-loader": "^3.5.3",
+    "css-loader": "^7.1.2",
     "file-loader": "^6.0.0",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^6.2.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.2",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3",
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
