--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^11.1.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
@@ -29,6 +30,7 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.2",
     "mini-css-extract-plugin": "^2.9.1",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "sass": "^1.80.3",
     "sass-loader": "^16.0.2",
